# casadi-playground

./: CMakeLists.txt
example_internal/: bar.cpp
